Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <html>
   
-<!-- This is a comment! -->
+
   
  <title> Hello </title> 
   
  
  
- <body> Hello </body> 
+ <body> Hello 
+ 
+</body> 
   
   
   
