Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   
 
 
- <title> Hello </title> 
+ <head>Hello</head> 
   
  
  
  <body> Hello 
- <!-- This is a comment! -->
-</body> 
+ </body> 
   
   
   
