Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 
 <html>
   
-
-
- <head>Hello</head> 
+  <head> </head>
   
- 
- 
- <body> Hello 
- </body> 
+  <body>   </body>
+  
+  
+  
+  
+  
+  
+  
   
   
   
 </html>
-
-
